# msc-project

./: .ackrc  .gitignore  .gitmodules  README.md  requirements.txt  setup.py
data/output/: ptb-test.ini  ptb-train-1k.ini  ptb-valid.ini
misc/: install_berkeley_parser.sh  install_evalb.sh  install_stanford_parser.sh
pypkg/: dataset.py  utils.py
scripts/: do_brown_cluster.py  get_unkified_from_oracle.py  get_words_from_parsed.py  move_ptb1029_split.sh  move_ptb_1029_split.sh  remove_unk_nt.py  remove_unseen.py  remove_unseen_unk.py  split_cv.py  word_percentage.py
src/: .gitignore  CMakeLists.txt  README.md  dataset.py  get_oracle.py  get_oracle_gen.py  get_oracle_gen_id.py  get_oracle_id.py  oracle.py  sample_input_indonesian.txt  utils.py
src/nt-parser/: CMakeLists.txt  char-embeddings.cc  char-embeddings.h  embeddings.cc  embeddings.h  nt-parser-char.cc  nt-parser-gen-char.cc  nt-parser-gen.cc  nt-parser.cc  oracle.cc  oracle.h
